# lvc-wallet

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  main.jsx  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/walletd/lib-boost/: libboost_filesystem.so.1.55.0  libboost_program_options.so.1.55.0  libboost_system.so.1.55.0
src-tauri/src/: lib.rs  main.rs
src/api/: rpc.js  walletd.js
src/components/: Dashboard.jsx  SettingsPanel.jsx  WalletManager.jsx  icons.jsx  ui.jsx
src/context/: SettingsContext.jsx
src/i18n/: bg.json  en.json  index.jsx
