[package]
name = "lvc-wallet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# the _lib suffix avoids a bin/lib name collision on windows, see rust-lang/cargo#8519
name = "lvc_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-dialog = "2.7.1"


[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
